# adic-core

./: .env.example  .gitignore  API.md  BOOTSTRAP.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Dockerfile  Dockerfile.dev  Dockerfile.fromhost  Dockerfile.prebuilt  Dockerfile.simulator  Dockerfile.test  EVENT_STREAMING_SUMMARY.md  GENESIS.md  INTEGRATION_FIXES.md  LICENSE  MESSAGE_TRANSFER_IMPLEMENTATION.md  Makefile  QUICK-DEPLOY.md  QUICK_START_EVENT_STREAMING.md  README.md  RELEASE_NOTES_0.3.0.md  SECURITY.md  SSH-DEPLOYMENT-SETUP.md  TESTNET.md  adic-config.toml  bootstrap-config.toml  build.sh  clippy.toml  docker-compose.dev.yml  docker-compose.testnet.yml  docker-compose.yml  genesis-testnet.json  genesis.json  node.key  rustfmt.toml  testnet-config.toml  validate-workflows.sh  (+1 more)
crates/adic-app-common/: Cargo.toml  README.md
crates/adic-app-common/examples/: lifecycle_escrow_example.md  network_metadata_http_example.md  security_audit.md
crates/adic-app-common/src/: cert_pinning.rs  error.rs  escrow.rs  finality_adapter.rs  lib.rs  lifecycle.rs  message_trait.rs  network_metadata.rs  network_metadata_http.rs  parameter_store.rs  params.rs  security.rs  types.rs
crates/adic-bench/: Cargo.toml
crates/adic-bench/benches/: consensus_bench.rs  f2_finality_bench.rs  storage_bench.rs
crates/adic-bench/src/: lib.rs
crates/adic-challenges/: Cargo.toml  README.md
crates/adic-challenges/src/: adjudication.rs  error.rs  fraud_proof.rs  lib.rs  types.rs  window.rs
crates/adic-consensus/: Cargo.toml
crates/adic-consensus/src/: admissibility.rs  c1_security_test.rs  conflict.rs  deposit.rs  energy_descent.rs  lib.rs  reputation.rs  validation.rs
crates/adic-consensus/tests/: c1c3_enforcement_test.rs  comprehensive_consensus_test.rs  mathematical_invariants_test.rs  simplex_geometry_test.rs
crates/adic-crypto/: Cargo.toml
crates/adic-crypto/src/: bls.rs  consensus_crypto.rs  dkg.rs  feature_crypto.rs  lib.rs  padic_crypto.rs  security_params.rs  standard_crypto.rs  test_helpers.rs  ultrametric_security.rs
crates/adic-crypto/tests/: integration_test.rs  security_attacks_test.rs
crates/adic-economics/: Cargo.toml
crates/adic-economics/examples/: address_demo.rs  compute_address.rs
crates/adic-economics/src/: address_encoding.rs  balance.rs  emission.rs  genesis.rs  lib.rs  storage.rs  supply.rs  treasury.rs  types.rs
crates/adic-economics/tests/: e2e_comprehensive_test.rs  fuzz_tests.proptest-regressions  fuzz_tests.rs  integration_test.rs  invariant_tests.rs  security_tests.rs  stress_tests.rs
crates/adic-finality/: Cargo.toml
crates/adic-finality/src/: artifact.rs  checkpoint.rs  engine.rs  homology.rs  kcore.rs  lib.rs
crates/adic-finality/tests/: f2_homology_integration_test.rs  f2_security_test.rs  finality_integration_test.rs  validation_against_gudhi.rs
crates/adic-finality/validation/: README.md  generate_references.py  pyproject.toml
crates/adic-governance/: Cargo.toml  README.md
crates/adic-governance/src/: axis_catalog.rs  conflict_resolution.rs  error.rs  lib.rs  lifecycle.rs  metrics.rs  overlap_penalties.rs  parameters.rs  treasury.rs  types.rs  voting.rs
crates/adic-governance/tests/: phase2_integration_test.rs
crates/adic-math/: Cargo.toml
crates/adic-math/src/: ball.rs  distance.rs  error.rs  lib.rs  padic.rs  valuation.rs
crates/adic-math/tests/: property_based_test.proptest-regressions  property_based_test.rs
crates/adic-mrw/: Cargo.toml
crates/adic-mrw/src/: lib.rs  selector.rs  selector_tests.rs  trace.rs  weights.rs  weights_tests.rs
crates/adic-mrw/tests/: enhanced_mrw_test.rs  reputation_impact_test.rs
crates/adic-network/: Cargo.toml
crates/adic-network/src/: codecs_tests.rs  deposit_verifier.rs  dns_version.rs  lib.rs  metrics.rs  peer.rs  peer_tests.rs  pipeline.rs  resilience.rs  routing.rs  security.rs  sync.rs  transport.rs  transport_tests.rs
crates/adic-network/tests/: deadlock_test.rs  dns_seeds_test.rs  finality_artifact_propagation_test.rs  five_node_security_test.rs  governance_bls_test.rs  integration_test.rs  minimal_test.rs  multi_peer_test.rs  reconnection_test.rs  simple_node_test.rs  three_node_finality_test.rs  update_integration_test.rs  update_retry_test.rs
crates/adic-node/: Cargo.toml
crates/adic-node/monitoring/: prometheus.yml
crates/adic-node/src/: api.rs  api_governance.rs  api_sse.rs  api_storage_market.rs  api_wallet.rs  api_wallet_tx.rs  api_ws.rs  auth.rs  auth_ed25519.rs  auth_tests.rs  cli.rs  cli_governance.rs  cli_storage_market.rs  config.rs  config_loader.rs  copyover.rs  economics_api.rs  events.rs  genesis.rs  lib.rs  logging.rs  main.rs  metrics.rs  node.rs  openapi.rs  progress_display.rs  update_manager.rs  update_verifier.rs  wallet.rs  wallet_registry.rs
crates/adic-node/tests/: attack_simulation_test.rs  byzantine_fault_test.rs  c1c3_enforcement_test.rs  config_test.rs  cross_module_integration_test.rs  dkg_epoch_integration_test.rs  e2e_integration_test.rs  economics_integration_test.rs  event_streaming_integration.rs  five_node_governance_test.rs  full_stack_integration_test.rs  genesis_validation_test.rs  governance_integration_test.rs  h1_metadata_quorum_test.rs  integration_test.rs  message_transfer_integration.rs  network_simulation_test.rs  node_tests.rs  persistence_recovery_test.rs  proof_endpoints_test.rs  update_manager_test.rs
crates/adic-pouw/: Cargo.toml  README.md
crates/adic-pouw/examples/: basic_usage.rs  dispute_resolution.rs
crates/adic-pouw/src/: bls_coordinator.rs  committee.rs  disputes.rs  dkg_manager.rs  dkg_orchestrator.rs  error.rs  executor.rs  input_storage.rs  lib.rs  receipt_validator.rs  reputation.rs  rewards.rs  task_manager.rs  task_storage.rs  types.rs  validator.rs  worker_selection.rs
crates/adic-pouw/tests/: bls_threshold_integration_test.rs  dkg_network_integration_test.rs  integration_test.rs  receipt_bls_verification_test.rs  (+1 more)
crates/adic-storage/: Cargo.toml
crates/adic-storage-market/: Cargo.toml  README.md
crates/adic-types/: Cargo.toml
crates/adic-vrf/: Cargo.toml  README.md
(+151 files in other folders)
