[package]
name = "adic-challenges"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared challenge and dispute framework for ADIC-DAG applications"

[dependencies]
# Core ADIC dependencies
adic-types = { path = "../adic-types" }
adic-consensus = { path = "../adic-consensus" }
adic-app-common = { path = "../adic-app-common" }
adic-quorum = { path = "../adic-quorum" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Cryptography
blake3 = "1.5"
hex = "0.4"

# Logging
tracing = "0.1"

# Metrics
prometheus = { workspace = true }

# Utilities
chrono = "0.4"

[dev-dependencies]
tokio-test = "0.4"
adic-vrf = { path = "../adic-vrf" }
