[package]
name = "adic-consensus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
adic-types = { path = "../adic-types" }
adic-math = { path = "../adic-math" }
adic-crypto = { path = "../adic-crypto" }
adic-economics = { path = "../adic-economics" }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"