[package]
name = "adic-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
adic-types = { path = "../adic-types" }
ed25519-dalek = { workspace = true, features = ["rand_core"] }
blake3 = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
chrono = { workspace = true }