[package]
name = "adic-economics"
version = "0.1.0"
edition = "2021"

[features]
default = []
rocksdb = ["dep:rocksdb"]

[dependencies]
adic-types = { path = "../adic-types" }
adic-storage = { path = "../adic-storage" }
rocksdb = { version = "0.22", optional = true }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
anyhow = "1.0"
chrono = "0.4"
hex = "0.4"
blake3 = "1.5"

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.0"
arbitrary = { version = "1.0", features = ["derive"] }
rand = "0.8"
criterion = "0.5"