[package]
name = "adic-economics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
rocksdb = ["dep:rocksdb"]

[dependencies]
adic-types = { path = "../adic-types" }
adic-storage = { path = "../adic-storage" }
rocksdb = { version = "0.22", optional = true }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
anyhow = "1.0"
chrono = "0.4"
hex = "0.4"
blake3 = "1.5"
bech32 = "0.11"

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.0"
tempfile = "3.8"
arbitrary = { version = "1.0", features = ["derive"] }
rand = "0.8"
criterion = "0.5"