[package]
name = "adic-finality"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
adic-types = { path = "../adic-types" }
adic-consensus = { path = "../adic-consensus" }
adic-storage = { path = "../adic-storage" }
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
# Mathematical libraries for persistent homology
num-traits = { workspace = true }
num-integer = { workspace = true }
nalgebra = "0.33"
petgraph = "0.6"
ordered-float = "4.2"

[dev-dependencies]
tokio-test = "0.4"
adic-crypto = { path = "../adic-crypto" }
tempfile = "3.8"