[package]
name = "adic-math"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
adic-types = { path = "../adic-types" }
num-bigint = { workspace = true }
num-traits = { workspace = true }
num-integer = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = "1.5"