[package]
name = "adic-mrw"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
adic-types = { path = "../adic-types" }
adic-math = { path = "../adic-math" }
adic-consensus = { path = "../adic-consensus" }
adic-storage = { path = "../adic-storage" }
rand = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"