[package]
name = "adic-network"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
adic-types = { path = "../adic-types" }
adic-math = { path = "../adic-math" }
adic-storage = { path = "../adic-storage" }
adic-consensus = { path = "../adic-consensus" }
adic-finality = { path = "../adic-finality" }
adic-crypto = { path = "../adic-crypto" }
libp2p = { workspace = true }
quinn = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
blake3 = { workspace = true }
prometheus = { workspace = true }
prost = { workspace = true }
bloom = "0.3"
bincode = "1.3"
rustls = "0.23"
rustls-pemfile = "2.0"
rcgen = "0.13"
snap = "1"
webpki-roots = "0.26"
sha2 = "0.10"
rand = "0.8"
hex = { workspace = true }
ed25519-dalek = "2.1"
hickory-resolver = { version = "0.24", features = ["tokio-runtime"] }

[features]
# Default features avoid system C toolchains for CI portability
default = []

[dev-dependencies]
tokio-test = "0.4"
adic-crypto = { path = "../adic-crypto" }
hex = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = "3.10"
chrono = { workspace = true }
