[package]
name = "adic-node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "adic"
path = "src/main.rs"

[dependencies]
adic-types = { path = "../adic-types" }
adic-math = { path = "../adic-math" }
adic-crypto = { path = "../adic-crypto" }
adic-consensus = { path = "../adic-consensus" }
adic-economics = { path = "../adic-economics" }
adic-mrw = { path = "../adic-mrw" }
adic-finality = { path = "../adic-finality" }
adic-storage = { path = "../adic-storage" }
adic-network = { path = "../adic-network" }

tokio = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
prometheus = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
toml = "0.8"
dotenv = "0.15"
libp2p = { workspace = true }
jsonwebtoken = "9"
rand = "0.8"
axum-extra = { version = "0.9", features = ["typed-header"] }
headers = "0.4"

[features]
default = ["rocksdb"]
rocksdb = ["adic-storage/rocksdb"]

[dev-dependencies]
tempfile = "3"