[package]
name = "adic-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
adic-types = { path = "../adic-types" }
rocksdb = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
bincode = "1.3"
sha2 = "0.10"
chrono = { workspace = true }
hex = "0.4"
blake3 = { workspace = true }
lazy_static = "1.4"

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"
adic-crypto = { path = "../adic-crypto" }

[features]
default = ["rocksdb"]
rocksdb = ["dep:rocksdb"]