[package]
name = "adic-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

[dev-dependencies]
bincode = "1.3"
hex = { workspace = true }
chrono = { workspace = true }
num-bigint = { workspace = true }

[build-dependencies]
prost-build = "0.13"