[package]
name = "adic-types-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[workspace]

[dependencies]
libfuzzer-sys = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.adic-types]
path = ".."

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_canonical_json_serialization"
path = "fuzz_targets/fuzz_canonical_json_serialization.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_canonical_hash"
path = "fuzz_targets/fuzz_canonical_hash.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_key_ordering"
path = "fuzz_targets/fuzz_key_ordering.rs"
test = false
doc = false
bench = false
